# branchclean

./: LICENSE  README.md  pyproject.toml
branchclean/: __init__.py  app.py  branch.py  cleaner.py  cli.py  log.py  util.py
